# docs-conversation-api

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_pgvector.py  003_add_enabled_to_embeddings.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  api_keys.py  conversations.py  estante.py  links.py  notebooks.py  router.py
app/api/v1/endpoints/: api_keys.py  conversations.py  estante.py  notebooks.py  sources.py
app/core/: config.py
app/db/: __init__.py  base.py
app/models/: __init__.py  api_key.py  chat_message.py  conversation.py  document_embedding.py  notebook.py  source.py
app/schemas/: __init__.py  api_key.py  chat_message.py  conversation.py  notebook.py  source.py
app/services/: __init__.py  database_service.py  estante.py  llm_service.py  vector_store.py
app/utils/: __init__.py  text_extraction.py  web_scraper.py
docker/: docker-compose.yml  postgres.dockerfile
docs/: API_GUIDE.md
scripts/: start.sh
